--- a/client/styles/scss/layouts/home/_sign-in.scss
+++ b/client/styles/scss/layouts/home/_sign-in.scss
@@ -26,11 +26,8 @@
         }
 
         li {
-            overflow: hidden;
             margin-top: 9px;
-            border: 1px solid rgba(#000000, 0.1);
             text-align: center;
-            @include border-radius(4px);
             @include breakpoint(extra-small) {
                 margin-top: 19px;
             }
@@ -73,7 +70,12 @@
                     background-color: #0aa2e0;
                     background-position: 0 -76px;
                     @include breakpoint(extra-small) {
-                    background-position: 0 -116px;
+                        background-position: 0 -116px;
+                    }
+                    &.l-in{
+                        background-color: #0a6595;
+                        background-image: url("../../images/sprites/in.png");
+                        background-position: 0 0;
                     }
                 }
             }
@@ -123,28 +125,11 @@
         }
     }
     .monitor {
-        height: 288px;
         margin-top: 68px;
-        @include breakpoint(medium) {
-            height: 262px;
-        }
-        @include breakpoint(small) {
-            height: 219px;
-        }
-        @include breakpoint(extra-small) {
-            height: 186px;
-            margin-top: 32px;
-        }
-        @include breakpoint(s-extra-small){
-            width: 100%;
-            margin: 32px auto 0;
-            height: 113px;
-        }
+
         img{
             width: 100%;
-            height: 100%;
             @include user-select(none);
         }
     }
-
 }
