--- a/client/styles/css/index.css
+++ b/client/styles/css/index.css
@@ -7247,6 +7247,7 @@ a, a:hover {
 
 .button {
   display: block;
+  border: 1px solid rgba(0, 0, 0, 0.2);
   font-family: "Open sans";
   font-weight: 600;
   text-align: center;
@@ -7263,11 +7264,11 @@ a, a:hover {
   border-radius: 4px;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.3);
-  background-image: -webkit-gradient(radial, 50% 0%, 0, 50% 0%, 100, color-stop(0%, rgba(246, 246, 246, 0.6)), color-stop(100%, rgba(184, 186, 187, 0.6)));
-  background-image: -webkit-radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, rgba(184, 186, 187, 0.6) 100%);
-  background-image: -moz-radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, rgba(184, 186, 187, 0.6) 100%);
-  background-image: -o-radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, rgba(184, 186, 187, 0.6) 100%);
-  background-image: radial-gradient(top, rgba(246, 246, 246, 0.6) 0%, rgba(184, 186, 187, 0.6) 100%);
+  background-image: -webkit-gradient(radial, 50% 0%, 0, 50% 0%, 100, color-stop(0%, #f6f6f6), color-stop(100%, #d1d1d1));
+  background-image: -webkit-radial-gradient(top, #f6f6f6 0%, #d1d1d1 100%);
+  background-image: -moz-radial-gradient(top, #f6f6f6 0%, #d1d1d1 100%);
+  background-image: -o-radial-gradient(top, #f6f6f6 0%, #d1d1d1 100%);
+  background-image: radial-gradient(top, #f6f6f6 0%, #d1d1d1 100%);
 }
 .button:hover {
   background-image: -webkit-gradient(radial, 50% 0%, 0, 50% 0%, 100, color-stop(0%, #f6f6f6), color-stop(100%, #b8babb));
@@ -7446,15 +7447,8 @@ footer p {
   }
 }
 .home .sign-in ul li {
-  overflow: hidden;
   margin-top: 9px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
 }
 @media (max-width: 767px) {
   .home .sign-in ul li {
@@ -7507,6 +7501,11 @@ footer p {
     background-position: 0 -116px;
   }
 }
+.home .sign-in ul li:nth-child(1) a > span.l-in {
+  background-color: #0a6595;
+  background-image: url("../../images/sprites/in.png");
+  background-position: 0 0;
+}
 .home .sign-in ul li:nth-child(2) a > span {
   background-color: #3a5591;
   background-position: 0 -114px;
@@ -7550,35 +7549,10 @@ footer p {
   background-position: 0 0;
 }
 .home .sign-in .monitor {
-  height: 288px;
   margin-top: 68px;
-}
-@media (min-width: 992px) and (max-width: 1199px) {
-  .home .sign-in .monitor {
-    height: 262px;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .home .sign-in .monitor {
-    height: 219px;
-  }
-}
-@media (max-width: 767px) {
-  .home .sign-in .monitor {
-    height: 186px;
-    margin-top: 32px;
-  }
-}
-@media (max-width: 600px) {
-  .home .sign-in .monitor {
-    width: 100%;
-    margin: 32px auto 0;
-    height: 113px;
-  }
 }
 .home .sign-in .monitor img {
   width: 100%;
-  height: 100%;
   -webkit-user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
