--- a/client/styles/scss/components/_button.scss
+++ b/client/styles/scss/components/_button.scss
@@ -1,5 +1,6 @@
 .button{
     display: block;
+    border: 1px solid rgba(#000000, 0.2);
     font-family: "Open sans";
     font-weight: 600;
     text-align: center;
@@ -7,7 +8,7 @@
     @include user-select(none);
     @include border-radius(4px);
     @include box-shadow(0px 2px 1px rgba(0, 0, 0, 0.3));
-    @include background-image(radial-gradient(top, rgba(#f6f6f6, 0.6) 0, rgba(#b8babb, 0.6) 100%));
+    @include background-image(radial-gradient(top, rgba(#f6f6f6, 1) 0, rgba(#d1d1d1, 1) 100%));
 
     &:hover{
         @include background-image(radial-gradient(top, rgba(#f6f6f6, 1) 0, rgba(#b8babb, 1) 100%));
