--- a/client/styles/css/index.css
+++ b/client/styles/css/index.css
@@ -7295,11 +7295,12 @@ a, a:hover {
 }
 
 .button-registration {
+  position: relative;
   display: inline-block;
   width: 50%;
   border: 1px solid rgba(0, 0, 0, 0.2);
   background-color: #3b9be0;
-  font-size: 15px;
+  font-size: 18px;
   line-height: 58px;
   text-align: center;
   text-shadow: 1px 1px 2px #000000;
@@ -7316,6 +7317,15 @@ a, a:hover {
   border-radius: 4px;
   -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.button-registration::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 .button-registration:hover {
   text-decoration: underline;
@@ -7334,7 +7344,7 @@ a, a:hover {
     padding: 50px 15px 100px;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 600px) {
   .sign-up .button-registration {
     font-size: 13px;
   }
@@ -7361,6 +7371,59 @@ a, a:hover {
   width: 100%;
   display: inline-block;
 }
+.sign-up form .input-container:nth-child(3) {
+  margin-right: 2%;
+}
+.sign-up form .input-container:nth-child(3), .sign-up form .input-container:nth-child(4) {
+  width: 49%;
+}
+.sign-up form .input-container input {
+  display: inline-block;
+  width: 100%;
+  height: 40px;
+  margin-top: 10px;
+  padding: 14px 9px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background-color: #f7f8f8;
+  font-size: 13px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+.sign-up form .input-container input::-webkit-input-placeholder {
+  font-family: "Open sans";
+  font-weight: 600;
+  font-size: 12px;
+  color: #061b2a;
+}
+.sign-up form .input-container input:-moz-placeholder {
+  font-family: "Open sans";
+  font-weight: 600;
+  font-size: 12px;
+  color: #061b2a;
+}
+.sign-up form .input-container input::-moz-placeholder {
+  font-family: "Open sans";
+  font-weight: 600;
+  font-size: 12px;
+  color: #061b2a;
+}
+.sign-up form .input-container input:-ms-input-placeholder {
+  font-family: "Open sans";
+  font-weight: 600;
+  font-size: 12px;
+  color: #061b2a;
+}
+.sign-up form .input-container input:focus {
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
 .sign-up form .input-container span {
   position: absolute;
   top: 20px;
@@ -7378,59 +7441,6 @@ a, a:hover {
   .sign-up form .input-container span {
     right: 5px;
   }
-}
-.sign-up form .input-container:nth-child(3) {
-  margin-right: 2%;
-}
-.sign-up form .input-container:nth-child(3), .sign-up form .input-container:nth-child(4) {
-  width: 49%;
-}
-.sign-up form input {
-  display: inline-block;
-  width: 100%;
-  height: 40px;
-  margin-top: 10px;
-  padding: 14px 9px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  background-color: #f7f8f8;
-  font-size: 13px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.3);
-}
-.sign-up form input::-webkit-input-placeholder {
-  font-family: "Open sans";
-  font-weight: 600;
-  font-size: 12px;
-  color: #061b2a;
-}
-.sign-up form input:-moz-placeholder {
-  font-family: "Open sans";
-  font-weight: 600;
-  font-size: 12px;
-  color: #061b2a;
-}
-.sign-up form input::-moz-placeholder {
-  font-family: "Open sans";
-  font-weight: 600;
-  font-size: 12px;
-  color: #061b2a;
-}
-.sign-up form input:-ms-input-placeholder {
-  font-family: "Open sans";
-  font-weight: 600;
-  font-size: 12px;
-  color: #061b2a;
-}
-.sign-up form input:focus {
-  border-color: #66afe9;
-  outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
 .sign-up form button {
   float: right;
