--- a/client/styles/scss/widgets/_sign-up.scss
+++ b/client/styles/scss/widgets/_sign-up.scss
@@ -10,7 +10,7 @@
 
     .button-registration {
 
-        @include breakpoint(extra-small){
+        @include breakpoint(s-extra-small){
             font-size: 13px;
         }
 
@@ -33,10 +33,44 @@
         font-family: "Open sans";
         font-weight: 600;
         font-size: 0;
+
         .input-container {
             position: relative;
             width: 100%;
             display: inline-block;
+
+            &:nth-child(3) {
+                margin-right: 2%;
+            }
+
+            &:nth-child(3), &:nth-child(4) {
+                width: 49%;
+            }
+
+            input {
+                display: inline-block;
+                width: 100%;
+                height: 40px;
+                margin-top: 10px;
+                padding: 14px 9px;
+                border: 1px solid rgba(#000000, 0.2);
+                background-color: #f7f8f8;
+                font-size: 13px;
+                @include border-radius(4px);
+                @include box-shadow(0px 2px 1px rgba(0, 0, 0, 0.3));
+                @include placeholder {
+                    font-family: "Open sans";
+                    font-weight: 600;
+                    font-size: 12px;
+                    color: #061b2a;
+                }
+
+                &:focus{
+                    border-color: #66afe9;
+                    outline: 0;
+                    @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6));
+                }
+            }
 
             span {
                 position: absolute;
@@ -51,39 +85,8 @@
                     right: 5px;
                 }
             }
-            &:nth-child(3) {
-                margin-right: 2%;
-            }
-
-            &:nth-child(3), &:nth-child(4) {
-                width: 49%;
-            }
         }
 
-        input {
-            display: inline-block;
-            width: 100%;
-            height: 40px;
-            margin-top: 10px;
-            padding: 14px 9px;
-            border: 1px solid rgba(#000000, 0.2);
-            background-color: #f7f8f8;
-            font-size: 13px;
-            @include border-radius(4px);
-            @include box-shadow(0px 2px 1px rgba(0, 0, 0, 0.3));
-            @include placeholder {
-                font-family: "Open sans";
-                font-weight: 600;
-                font-size: 12px;
-                color: #061b2a;
-            }
-
-            &:focus{
-                border-color: #66afe9;
-                outline: 0;
-                @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6));
-            }
-        }
 
         button {
             float: right;
