--- a/client/styles/scss/widgets/_sign-up.scss
+++ b/client/styles/scss/widgets/_sign-up.scss
@@ -72,7 +72,7 @@
                 }
             }
 
-            span {
+            a {
                 position: absolute;
                 top: 20px;
                 right: 10px;
@@ -80,7 +80,6 @@
                 height: 18px;
                 background-repeat: no-repeat;
                 @include user-select(none);
-
                 @include breakpoint(extra-small){
                     right: 5px;
                 }
