--- a/client/styles/scss/components/_button.scss
+++ b/client/styles/scss/components/_button.scss
@@ -8,9 +8,37 @@
     @include user-select(none);
     @include border-radius(4px);
     @include box-shadow(0px 2px 1px rgba(0, 0, 0, 0.3));
-    @include background-image(radial-gradient(top, rgba(#f6f6f6, 1) 0, rgba(#d1d1d1, 1) 100%));
 
-    &:hover{
-        @include background-image(radial-gradient(top, rgba(#f6f6f6, 1) 0, rgba(#b8babb, 1) 100%));
+    &.gray {
+        @include background-image(linear-gradient(top, rgba(246,246,246,1) 0%,rgba(209,209,209,1) 100%));
+
+        &:hover{
+            @include background-image(linear-gradient(top, rgba(246,246,246,1) 0%,rgba(184,186,187,1) 100%));
+        }
+    }
+
+    &.blue {
+        position: relative;
+        display: inline-block;
+        background-color: #3b9be0;
+        font-size: 18px;
+        line-height: 58px;
+        text-shadow: 1px 1px 2px #000000;
+        color: #fefefe;
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: rgba(#ffffff, 0.4);
+        }
+
+        &:hover {
+            text-decoration: underline;
+            color: #fefefe;
+        }
     }
 }
