--- a/client/styles/scss/layouts/home/_sign-in.scss
+++ b/client/styles/scss/layouts/home/_sign-in.scss
@@ -15,6 +15,7 @@
 
         span{
             padding: 21px 0;
+            background-color: #1769a4;
             @include box-shadow(inset 0px 242px 0px rgba(#1769a4, 1),20px 0px 0px rgba(#1769a4, 1));
         }
     }
