--- a/client/styles/scss/widgets/_footer.scss
+++ b/client/styles/scss/widgets/_footer.scss
@@ -3,11 +3,22 @@ footer {
         padding: 90px 0 40px;
     }
 
-    .logo {
+    a {
+        float: left;
+        display: block;
+        margin-top: 40px;
+        width: 228px;
+        height: 42px;
         background-image: url("../../images/logo/logo-footer.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        @include user-select(none);
         @include breakpoint(extra-small) {
             float: none;
             margin: 0 auto;
+        }
+        @include breakpoint(s-extra-small) {
+            margin-top: 25px;
         }
 
     }
