--- a/client/styles/scss/widgets/_header.scss
+++ b/client/styles/scss/widgets/_header.scss
@@ -1,13 +1,17 @@
 header {
     max-width: 970px;
     margin: 0 auto;
-    @include breakpoint(small){
+    @include breakpoint(small) {
         max-width: 750px;
     }
 
     .btn-style {
         margin: 0;
         padding: 47px 31px;
+        @include breakpoint(s-extra-small) {
+            padding: 30px 20px;
+        }
+
         .span-style {
             width: 37px;
             height: 6px;
@@ -31,15 +35,26 @@ header {
         color: #061b2a;
 
         &.logo {
+            float: left;
+            display: block;
+            width: 228px;
+            height: 42px;
+            margin-top: 40px;
             margin-left: 15px;
             background-image: url("../../images/logo/logo.png");
-            @include breakpoint(medium){
+            background-repeat: no-repeat;
+            background-size: contain;
+            @include user-select(none);
+            @include breakpoint(medium) {
                 margin-left: 100px;
             }
             @include breakpoint(extra-small) {
                 width: 47.6%;
                 height: 46px;
                 margin-left: 39px;
+            }
+            @include breakpoint(s-extra-small) {
+                margin-top: 25px;
             }
 
         }
@@ -53,9 +68,15 @@ header {
         font-size: 0;
         @include box-shadow(none);
         @include breakpoint(extra-small) {
+            position: absolute;
+            z-index: 2;
             width: 100%;
+            margin-top: 120px;
             padding: 0;
             background-color: #57baff;
+        }
+        @include breakpoint(s-extra-small) {
+            margin-top: 88px;
         }
 
         li {
@@ -82,6 +103,7 @@ header {
                 }
                 @include breakpoint(s-extra-small) {
                     font-size: 30px;
+                    line-height: 70px;
                 }
 
             }
